syntax = "proto3";

import "collections_service.proto";
import "collections_internal_service.proto";
import "points_service.proto";
import "points_internal_service.proto";

package qdrant;

service Qdrant {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckReply) {}
}

message HealthCheckRequest {
}

message HealthCheckReply {
  string title = 1;
  string version = 2;
}
